fix text errors

--- a/DD/latex/sections/algorithmDesign.tex
+++ b/DD/latex/sections/algorithmDesign.tex
@@ -4,7 +4,7 @@
 	\begin{description}[before={\renewcommand{\makelabel}[1]{-- \textit{##1}:}}]
 		\item[a Notifier is deleted] this is the only activity that is not managed by the Manager because there is no reason for doing it. If the Notifier is simply being closed, it detaches itself from the Querier. If the Notifier crashes or it is suddenly closed, the Querier will notice this when trying to notify it and it will detach the dead Notifier. No other actions are needed.
 		\item[a Notifier is created] the new Notifier communicates its zone to the Manager. The Manager will return to the Notifier a reference to the appropriate Querier using the Address Solver to interpret the zone of the Notifier. Thus, the Notifier can subscribe itself to the Querier.
-		\item[a new Quierier is deleted] all the Notifiers previously attached to the Querier have to be analyzed. If a less specific Querier exists \textit{(see below)}, they are attached to it, otherwise they are put in a standby list (they will not receive any information about weather, or traffic)
+		\item[Quierier is deleted] all the Notifiers previously attached to the Querier have to be analyzed. If a less specific Querier exists \textit{(see below)}, they are attached to it, otherwise they are put in a standby list (they will not receive any information about weather, or traffic)
 		\item[a new Querier is instantiated] the standby list is scanned searching for Notifier that can be attached to the Querier (matching the two zone through the Address Solver). If a less specific Querier exists \textit{(see below)}, all the Notifier subscribed to it are analyzed and are eventually moved to the new Querier.
 	\end{description}
 	\medskip
