--- a/DD/latex/sections/traceability.tex
+++ b/DD/latex/sections/traceability.tex
@@ -4,7 +4,7 @@
 	\end{itemize}
 }
 
-Here we show the mapping between goals and requirements identified in the section 3.3 of the RASD and the modules of the business logic described in the previous sections of this document. We list only the components of the actual logic, omitting the DBMS, the Orchestrator and Mobile App and Web App, because they are omnipresent.
+Here we show the mapping between goals and requirements identified in the section 3.3 of the RASD and the modules of the business logic described in the previous sections of this document. We list only the components of the actual logic, omitting the DBMS, the Orchestrator, the Mobile App and the Web App, because they are omnipresent.
 
 \paragraph{Goal G1: a Person should be able to have his/her own Travlendar+ agenda}
 	\requirements{R1$\div$R6}
