--- a/DD/latex/sections/introduction.tex
+++ b/DD/latex/sections/introduction.tex
@@ -17,9 +17,9 @@
 	\subsubsection{Acronyms}
 			\begin{description}
 		\item[- \textit{S2B}:] System to Be;
-		\item[- \textit{API}:] Application Programming Interface.
+		\item[- \textit{API}:] Application Programming Interface;
+		\item[- \textit{RASD}:] Requirements Analysis and Specification Document
 	\end{description}
-	\subsubsection{Abbreviations}
 	
 \subsection{Revision history}
 	% TODO
@@ -31,7 +31,7 @@
 		\item[2. Architectural Design] After providing an overview of the system, in this sections we also include all the details of the architecture and the related design decisions. We start from the data model and we describe the components and their role. After a static description a runtime analysis of the interesting components is provided. Finally we describe the main component interfaces.
 		\item[3. Algorithm Design] In this section we described the most interesting Algorithms we identified in the system, how they works and their context.
 		\item[4. User Interfaces Design] After the technical description of the previous section, here we provide indications on the User interactions with the App and mockups of the screens related to the main functionalities.
-		\item[5. Requirements Traceability] This section explains the rationality behind our design decisions in terms of a mapping between the goal/requirements defined in the RASD and the components illustrated in this document.
+		\item[5. Requirements Traceability] This section explains the rational behind our design decisions in terms of a mapping between the goal/requirements defined in the RASD and the components illustrated in this document.
 		\item[6. Implementation, Integration and Test Plan] In this last technical section, we provide a Plan for the whole development process, giving indications on the general approach, the priorities and the details of the process.
 		\item[7. Effort Spent and Team Work] Here we include a summary of the Effort Spent by each member of the team and indications on his responsibilities.
 		\item[8. References] This is the section in which we include details on Software and Tools used and the Reference Documents on which we based our work.
