--- a/DD/latex/sections/references.tex
+++ b/DD/latex/sections/references.tex
@@ -1,13 +1,23 @@
 \subsection{Software and Tools}
 	\begin{itemize}
 	\item
-		\LaTeX\ for typesetting document
+		\underline{\LaTeX\ } for typesetting document
 	\item
-		TeXstudio as \LaTeX\ IDE
+		\underline{TeXstudio} as \LaTeX\ IDE
 	\item
-		GitHub for version control and team work
+		\underline{GitHub} and \underline{git} for version control and team work
 	\item
-		StarUML for UML models
+		\underline{StarUML} for UX diagrams
+	\item
+		\href{https://draw.io}{\underline{Draw.io}} for UML diagrams
+	\item
+		\underline{Microsoft Visio} for ER diagram
 	\end{itemize}
 \subsection{Reference Documents}
-	% TODO
+	\begin{itemize}
+		\item 1016-2009 - IEEE Standard for Information Technology -- Systems Design -- Software Design Descriptions: \href{http://ieeexplore.ieee.org/document/5167255/}{http://ieeexplore.ieee.org/document/5167255/}
+
+		\item 42010-2011 - ISO/IEC/IEEE Systems and software engineering -- Architecture description:
+		\\%leave here the break the line: problem with the url visualization
+		 \href{http://ieeexplore.ieee.org/document/6129467/}{http://ieeexplore.ieee.org/document/6129467/}
+	\end{itemize}
