--- a/DD/latex/sections/traceability.tex
+++ b/DD/latex/sections/traceability.tex
@@ -4,7 +4,7 @@
 	\end{itemize}
 }
 
-Here we show the mapping between goals and requirements identified in the section 3.3 of the RASD and the modules of the business logic described in the previous sections of this document. We list only the components of the actual logic, omitting the DBMS, the Orchestrator, the Mobile App and the Web App, because they are omnipresent.
+Here we show the mapping between goals and requirements identified in section 3.3 of the RASD and the modules of the business logic described in the previous sections of this document. We list only the components of the actual logic, omitting the DBMS, the Orchestrator, the Mobile App and the Web App because they are omnipresent.
 
 \paragraph{Goal G1: a Person should be able to have his/her own Travlendar+ agenda}
 	\requirements{R1$\div$R6}
@@ -61,7 +61,7 @@ Here we show the mapping between goals and requirements identified in the sectio
 		\item Ticket Manager: it provides ticket suggestions and let the User buy new tickets
 	\end{itemize}
 
-\paragraph{Goal G8: a User should be able to locate the nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an incoming appointment}
+\paragraph{Goal G8: a User should be able to locate the nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an \defined{incoming appointment}}
 	\requirements{R32}
 	Components:
 	\begin{itemize}[label=--]
@@ -69,7 +69,7 @@ Here we show the mapping between goals and requirements identified in the sectio
 		\item Vehicle Sharing Manager: it is in charge of the localization feature
 	\end{itemize}
 
-\paragraph{Goal G9: a User should be able to rent a shared vehicle, if that is the transportation mean of choice of an incoming appointment}
+\paragraph{Goal G9: a User should be able to rent a shared vehicle, if that is the transportation mean of choice of an \defined{incoming appointment}}
 	\requirements{R33, R34}
 	Components:
 	\begin{itemize}[label=--]
@@ -77,7 +77,7 @@ Here we show the mapping between goals and requirements identified in the sectio
 		\item Vehicle Sharing Manager: it is in charge of the redirection to the Shared Vehicle Company
 	\end{itemize}
 
-\paragraph{Goal G10: a User should always be aware of the incoming appointments and how to reach them}
+\paragraph{Goal G10: a User should always be aware of the \defined{incoming appointments} and how to reach them}
 	\requirements{R35$\div$R37}
 	Components:
 	\begin{itemize}[label=--]
