--- a/DD/latex/sections/i&tPlan.tex
+++ b/DD/latex/sections/i&tPlan.tex
@@ -1,6 +1,6 @@
 With the goal of identifying a proper developing plan, for each feature we have analyzed:
 \begin{itemize}
-	\item the importance for Users: how much the feature is perceived as fundamental, from the User point of view. Core features have been labeled with a high or medium-high importance. They have to be implemented completely in the first release. Features with importance low or medium-low are the ones that could be implemented in a successive releases and that add value to Travlendar+ but are not part of the core functionalities.
+	\item the importance for Users: how much the feature is perceived as fundamental, from the User point of view. Core features have been labeled with a high or medium-high importance. They have to be implemented completely in the first release. Features with importance low or medium-low are the ones that could be implemented in successive releases and that add value to Travlendar+ but are not part of the core functionalities.
 	\item difficulty of implementation of the Back End: it defines an estimate of the effort that will be spent in the implementation of the communication issues, the logic and the data models on the server required by the feature.
 	\item difficulty of implementation of the Front End: this indicates an estimate of the effort required to implement in the App \textit{(Mobile App or Web App)} the graphic and the user interactions
 \end{itemize}
