fix text errors in i&tPlan

--- a/DD/latex/sections/i&tPlan.tex
+++ b/DD/latex/sections/i&tPlan.tex
@@ -34,36 +34,36 @@ The following table summarizes the result of our analysis.
 
 \bigskip
 \noindent
-Verification and Validation process will begin as soon as the system starts to be implemented. For each component (and for each subcomponent belonging to it) there are two phases: the first one is an analysis concerning in a manual inspection by team members, the second one is an automatized test using tools support. We choose to make a manual inspection of the product because, in this way, we have a major formal level compared to a Walkthroughs analysis; in fact, inspection is an expensive technique, but it guarantees a low level of errors in the final product.\newline
-Below there is a list ordered (time increasing) by system features and not by components because, for the integration process, it is chosen to adopt Thread strategy. In this way we can release to the customer more than one version of the product, from the version that contains main functionalities (all of high importance for the user) to the complete version, adding step by step new less important features.
-Thread strategy allows to implement also a part of a specific component. For instance, considering Solution Creator component, at the beginning it can be implemented, analysed and tested without taking into account the possibility to specify settings (medium-low priority for the user). Setting features can be added into the system in a second moment.\bigskip \newline 
+Verification and Validation process will begin as soon as the system starts to be implemented. For each component (and for each subcomponent belonging to it) there are two phases: the first one is an analysis concerning in a manual inspection by team members, the second one is an automatized test using tools support. We chose to make a manual inspection of the product because, in this way, we have a major formal level compared to a Walkthroughs analysis; in fact, inspection is an expensive technique, but it guarantees a low level of errors in the final product.\newline
+Below there is a list ordered (time increasing) by system features and not by components because, for the integration process, it has been chosen to adopt Thread strategy. In this way we can release to the customer more than one version of the product, from the version that contains core functionalities (all of high importance for the user) to the complete version, adding step by step new features.
+Thread strategy allows implementing also a part of a specific component. For instance, considering Solution Creator component, at the beginning it can be implemented, analyzed and tested without taking into account the possibility to specify settings (medium-low priority for the user). Setting features can be added to the system at a later time.\bigskip \newline 
 
 \noindent
 Components will be implemented, integrated and tested in the following order:
 
 \begin{description}[before={\renewcommand{\makelabel}[1]{ \textbf{\textit{##1}}:}}]
 		
-	\item[1. Appointment creation and management] to satisfy this functionality, part of the Appointment Manager is implemented, analysed and tested. In particular, only two of its subcomponents are implemented, Appointment Editor and Appointment Handler.
-	\item[2. Solution calculation] to satisfy this functionality, part of the Solution Calculator is implemented, analysed and tested. Solution Calculator, at this point, interfaces with the implemented part of Appointment Manager and with Google API. It doesn't interface neither with Account Manager (solutions are processed without taking into account user's settings), nor with Weather and Traffic modules (solutions are calculated without considering bad weather and traffic).
-	\item[3. Sign up] to satisfy this functionality, part of Account Manager is implemented, analysed and tested. In particular, the part that allows user to sign up into the system in order to be recognized during future accesses.
-	\item[4. Schedule visualization] to satisfy this functionality, the implementation, analysis and test of Appointment Manager continues. In it there is not any additional component but, in this phase, we handle the graphic interface concerning the schedule visualization (medium-high in front end).\newline
-	It is possible to make a first release containing core functionalities. From now, except for point 6. below, each feature is a single module, so it can be released step by step.
-	\item[5. Settings] to satisfy this functionality, the implementation of Account Manager ends. The user has the possibility to insert preferences and to set constraints. From now, Solution Calculator processes travel solution taking into account the settings that the user sets.
-	\item[6. Notification system] in this phase of the process, Notification Manager and his subcomponents (Notification Scheduler, Notifier) are implemented. Note that, at this point, Notification Manager's utilizers (Incoming Appointment Scheduler, Weather and Traffic modules, Invitation Manager) are not present, so the notifications about previous illustrated components are not handled.
-	\item[7. Incoming Appointments] to satisfy this functionality, the implementation, analysis and test of Appointment Manager ends after adding its last subcomponent, Incoming Appointment Scheduler. Now Notification Manager also notifies incoming appointments.
-	\item[8. Wheather \& traffic updates] to satisfy this functionality, Weather and Traffic modules are implemented, analysed and tested completely. Now Solution Calculator processes travel solutions taking into account bad weather and traffic. The user receives related notifications.
-	\item[9. Invitations] to satisfy this functionality, Invitation Manager and related subcomponents are implemented, analysed and tested. Now the user receives notifications concerning invitations.
-	\item[10. Ticket purchase and management] to satisfy this functionality, Ticket Manager and related subcomponents are implemented, analysed and tested.
-	\item[11. Rent a sharing vehicle] to satisfy this functionality, part of Vehicle Sharing Manager is implemented, analysed and tested.
+	\item[1. Appointment creation and management] to satisfy this functionality, part of the Appointment Manager is implemented, analyzed and tested. In particular, only two of its subcomponents are implemented, Appointment Editor and Appointment Handler.
+	\item[2. Solution calculation] to satisfy this functionality, part of the Solution Calculator is implemented, analyzed and tested. Solution Calculator, at this point, interfaces with the implemented part of Appointment Manager and with Google API. It doesn't interface either with Account Manager (solutions are processed without taking into account user's settings) or with Weather and Traffic modules (solutions are calculated without considering bad weather and traffic).
+	\item[3. Sign up] to satisfy this functionality, part of Account Manager is implemented, analyzed and tested. In particular, the part that allows Users to sign up into the system in order to be recognized during future accesses.
+	\item[4. Schedule visualization] to satisfy this functionality, the implementation, analysis, and test of Appointment Manager continue. In it, there is not any additional component but, in this phase, we handle the graphics interface concerning the schedule visualization \textit{(medium-high in front-end)}.\newline
+	It is possible to make a first release containing core functionalities. From now on, except for point 6. below, each feature is a single module, so it can be released step by step.
+	\item[5. Settings] to satisfy this functionality, the implementation of Account Manager ends. The User has the possibility to insert preferences and to set constraints. From now on, Solution Calculator processes travel solution taking into account the settings that the user sets.
+	\item[6. Notification system] in this phase of the process, Notification Manager and his subcomponents (Notification Scheduler, Notification Dispatcher) are implemented. Note that, at this point, Notification Manager's utilizers (Incoming Appointment Scheduler, Weather and Traffic modules, Invitation Manager) are not present, so there are no actual notifications to send.
+	\item[7. Incoming Appointments] to satisfy this functionality, the implementation, analysis, and test of Appointment Manager end after adding its last subcomponent, Incoming Appointment Scheduler. Now Notification Manager also notifies incoming appointments.
+	\item[8. Wheather \& traffic updates] to satisfy this functionality, Weather and Traffic modules are implemented, analyzed and tested completely. Now Solution Calculator processes travel solutions taking into account bad weather and traffic. The user receives related notifications.
+	\item[9. Invitations] to satisfy this functionality, Invitation Manager and related subcomponents are implemented, analyzed and tested. Now the user receives notifications concerning invitations.
+	\item[10. Ticket purchase and management] to satisfy this functionality, Ticket Manager and related subcomponents are implemented, analyzed and tested.
+	\item[11. Rent a sharing vehicle] to satisfy this functionality, part of Vehicle Sharing Manager is implemented, analyzed and tested.
 	\item[12. Localization sharing vehicle] to satisfy this functionality, implementation, analysis and test of Vehicle Sharing Manager ends.\newline		
 \end{description} \bigskip
 \noindent
 During integration test process (and before its termination), the following must subsist:
 \begin{itemize}
-	\item DB must be activated, it must contain an adequate quantity of data in order to test system's performances by overloading it. In this way it is possible to test a big part of the components interfaced with the DBMS.
-	\item Interactions with external actors must be present, both on contractual and communicative level. In particular, at least two Transportation Companies, at least one Sharing Vehicle Company must interact with the system. This must subsist before Ticket Purchase and Management functionality will be completely implemented.  In this way, after their implementation, Ticket Manager and related subcomponents can be tested (with more attention on Purchase Manager) as soon as the implementation will be terminated. 
+	\item DB must be activated, it must contain an adequate quantity of data in order to test system's performances by overloading it. In this way, it is possible to test a big part of the components interfaced with the DBMS.
+	\item Interactions with external actors must be present, both on the contractual and on the communicative level. In particular, at least two Transportation Companies, at least one Sharing Vehicle Company must interact with the system. This must subsist before Ticket Purchase and Management functionality will be completely implemented.  In this way, after their implementation, Ticket Manager and related subcomponents can be tested (with more attention on Purchase Manager) as soon as the implementation will be terminated. 
 	Google must also be interfaced with the system before completing the implementation of Weather and Traffic update functionality. In this way we can test Weather and Traffic modules. 
-	\item Payment service must be activated and it has to concern affiliated Transportation Companies. In this way there is the possibility to test Ticket Manager and its subcomponents (e.g. Payment Handler). \newline	
+	\item Payment service must be activated and it has to concern affiliated Transportation Companies. In this way, there is the possibility to test Ticket Manager and its subcomponents (e.g. Payment Handler). \newline	
 \end{itemize} 
 \bigskip 
-We choose to implement, analyse and test at first, in a parallel way, Server and Mobile App. The Web App development will start as soon as the implementation and the test of all high and medium-high (respect to importance for the user) features will be completed.
+We chose to implement, analyze and test at first, in a parallel way, Server and Mobile App. The Web App development will start as soon as the implementation and the test of all high and medium-high priority (for the user) features will be completed.
